Fixes spacing of Frontpage article

--- a/components/article/assets/styles/article.scss
+++ b/components/article/assets/styles/article.scss
@@ -167,15 +167,14 @@
       @include rem(margin-left, 16px);
       @include rem(padding-top, 44px);
 
-
       @include small {
         @include rem(margin-left, 44px);
         @include rem(padding-top, 112px);
-        width: 30%;
+        width: 50%;
       }
 
       @include medium {
-        width: 40%;
+        width: 50%;
       }
 
       .su-heading {
@@ -207,24 +206,19 @@
       background-color: rgba($color-white, 0.5);
       transition: $animation-speed-slow;
 
-      &:hover {
-        @include small {
-          transform: scale(1.05) translateX(-10px);
-        }
-      }
-
       @include small {
         @include rem(margin-right, 16px);
         transform-origin: 20% 0;
-        max-width: 90%;
+        // max-width: 90%;
       }
 
       @include medium {
-        @include rem(margin-right, 32px);
+        //@include rem(margin-right, 32px);
       }
 
       a {
         @include rem(margin-right, 4px);
+        @include rem(margin-bottom, 4px);
         @include rem(padding, 4px 8px);
         @include rem(font-size, 16px);
         display: inline-block;
